--- a/CodeChef/Flipkart/Index.html
+++ b/CodeChef/Flipkart/Index.html
@@ -208,7 +208,7 @@
         <div class="container1">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="http://127.0.0.1:5500/TheKidandSmallKid.html">
+                    <a href="./Index.html">
                         <h2 class="color">TheKid</h2>
                         <span class="colo">Small</span>
                         <span class="col">Kid</span>
@@ -218,7 +218,7 @@
                     <input type="text" placeholder="Search for Products, Brands and More" class="bar">
                 </div>
                 <div class="col-md-2">
-                    <a href="D:\Web_Development\Loginportal.html">
+                    <a href="./Loginportal.html">
                         <button type="submit" class="log">Login</button>
                     </a>
                 </div>
