--- a/CodeChef/Flipkart/Loginportal.html
+++ b/CodeChef/Flipkart/Loginportal.html
@@ -14,7 +14,7 @@
     <div class="container1">
         <div class="row">
             <div class="col-md-2">
-                <a href="./Index.html">
+                <a href="./index.html">
                     <h2 class="color">TheKid</h2>
                     <span class="colo">Small</span>
                     <span class="col">Kid</span>
